--- a/docs_src/elements/images.html
+++ b/docs_src/elements/images.html
@@ -6,6 +6,8 @@ lead: "Implementations of and guidlines around image and shape."
 ---
 
 {% include elements/images/images.html %}
+{% include elements/images/responsive-loading-overview.html %}
+{% include elements/images/lazy-load-overview.html %}
 {% include elements/images/shapes.html %}
 {% include elements/images/components.html %}
 {% include elements/images/helpers.html %}
